# visitran

./: .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  actionlint.yaml  markdownlint.yaml  sonar-project.properties  tasks.py  yamllint.yaml
backend/: ceck.txt  celerybeat-schedule.db  entrypoint.sh  gunicorn_conf.py  manage.py  pyproject.toml  pytest.ini  sample.env
backend/backend/: __init__.py  celery.py  constants.py  execution_log_utils.py  log_constant.py  log_consumer_celery_tasks.py  pubsub_helper.py
backend/backend/account/: authentication_controller.py  authentication_plugin_registry.py  authentication_service.py  constants.py  custom_cache.py  custom_exceptions.py  dto.py  serializers.py  urls.py  views.py
backend/backend/application/: database_explorer.py  model_graph.py  utils.py  validate_mro.py  validate_references.py  visitran_backend_context.py  ws_client.py
backend/backend/application/config_parser/: base_parser.py  config_parser.py  constants.py  cycle_detector.py  dag_builder.py  dag_executor.py  execution_planner.py  fallback_handler.py  feature_flags.py  ibis_builder.py  materialization_handler.py  model_registry.py  performance_tracker.py  presentation_parser.py  sample_yaml.yaml  sql_builder.py  sql_dialect.py  sql_validator.py  transformation_parser.py  validation_reporter.py  validation_storage_service.py  yaml_loader.py  yaml_source_tracker.py  yaml_validator.py
backend/backend/application/context/: application.py  base_context.py  chat_ai_context.py  chat_message_context.py  connection.py  environment.py  formula_context.py  llm_context.py  model_graph.py  no_code_model.py  sql_flow.py  token_cost_service.py
backend/backend/application/file_explorer/: constants.py  file_explorer.py  file_system_handler.py  local_file_system_handler.py  plugin_registry.py  storage_controller.py
backend/backend/application/interpreter/: base_interpreter.py  constants.py  interpreter.py
backend/backend/application/model_validator/: __init__.py  draft_validator.py  model_config_validator.py  model_validator.py
backend/backend/application/sample_project/: dvd_rental_final.py  dvd_rental_starter.py  jaffle_shop_final.py  jaffle_shop_starter.py  sample_project.py
backend/backend/application/session/: base_session.py  connection_session.py  env_session.py  organization_session.py  session.py
backend/backend/core/: apps.py  authentication.py  chat_constants.py  log_handler.py  redis_client.py  socket_session_manager.py  urls.py  user.py  utils.py  views.py  web_socket.py
backend/backend/core/constants/: reserved_names.py
backend/backend/core/middlewares/: log_aggregator.py  log_configuration.py  oss_auth_middleware.py  oss_csrf_middleware.py
backend/backend/core/migrations/: 0001_initial.py  0002_seed_data.py  0003_add_model_run_status.py  0003_version_history_initial.py  0004_add_is_current_to_modelversion.py  0005_pr_workflow_fields.py  0006_pr_mode_and_branch_name.py  0007_nullable_model_data.py  0008_remove_draft_conflict_tables.py  0009_cleanup_draft_audit_events.py  0010_git_project_folder.py
backend/backend/core/mixins/: http_request_handler.py  resource_permission_handler.py
backend/backend/core/models/: __init__.py  ai_context_rules.py  api_tokens.py  backup_models.py  chat.py  chat_intent.py  (+19 more)
backend/backend/errors/: __init__.py  chat_exceptions.py  config_exceptions.py  dependency_exceptions.py  error_codes.py  exceptions.py  validation_exceptions.py  visitran_backend_base_exceptions.py
backend/backend/server/: asgi.py  base_urls.py  django_conf.py  urls.py  wsgi.py
backend/backend/utils/: calculate_chat_tokens.py  constants.py  dbtype_mapper.yaml  decryption_utils.py  encryption.py  log_events.py  pagination.py  rsa_encryption.py  tenant_context.py  utils.py
backend/formulasql/: formulasql.py
backend/formulasql/base_functions/: base_logics.py  base_math.py  base_text.py
backend/formulasql/examples/: example.py
backend/formulasql/functions/: datetime.py  logics.py  math.py  operators.py  text.py  window.py
backend/formulasql/tests/: conftest.py  test_formulasql_datetime.py  test_formulasql_logics.py  test_formulasql_math.py  test_formulasql_operators.py  test_formulasql_text.py  test_new_formulas.py  validate_new_formulas.py
backend/formulasql/utils/: constants.py  formulasql_utils.py
backend/rbac/: EnvironmentAwarePermission.py  base_decorator.py  factory.py  oss_decorator.py
backend/tests/integration_tests/: collect_static.sh  conftest.py  helper.py  how_to_add_more_tests.md  test_backend.py  test_ui_transformations.py
backend/tests/unit_tests/: conftest.py  test_cycle_detector.py  test_dag_builder.py  test_dag_executor.py  test_direct_execution_api.py  test_execution_metrics.py  test_execution_planner.py  test_fallback_handler.py  test_feature_flags.py  test_ibis_builder.py  test_incremental_strategies.py  test_materialization_handler.py  test_model_graph.py  test_model_registry.py  test_model_registry_ibis_cache.py  test_performance_tracker.py  test_sql_builder.py  test_sql_validator.py  test_transformation_error.py  test_transformation_orderings.py  test_validation_reporter.py  test_validation_storage.py  test_yaml_loader.py  test_yaml_source_tracker.py  test_yaml_validator.py
backend/utils/models/: organization_mixin.py
backend/visitran/: __init__.py  constants.py  flags.py  materialization.py  singleton.py  utils.py  visitran.py  visitran_context.py
backend/visitran/adapters/: adapter.py  connection.py  db_reader.py  model.py  scd.py  seed.py
backend/visitran/errors/: __init__.py  base_exceptions.py  core_exceptions.py  error_codes.py  exceptions.py  execution_exceptions.py  transformation_exceptions.py  validation_exceptions.py
backend/visitran/events/: README.md  __init__.py  base_types.py  eventmgr.py  functions.py  log_helper.py  printer.py  proto_types.py  types.proto  types.py
backend/visitran/templates/: __init__.py  delta_strategies.py  model.py  snapshot.py
visitran/: pyproject.toml
(+697 files in other folders)
